--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -13,7 +14,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.8.3",
     "morgan": "~1.9.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
