--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "underscore": "^1.9.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
